@@ -1,3 +1,7 @@
+2010-03-25  Sky French <sfrench@hep.phy.cam.ac.uk>
+	* Tag as TrigT1CaloMonitoring-00-06-21
+	* Fixed compilation warnings and pedestal plots
+	
 2010-03-23  Sky French <sfrench@hep.phy.cam.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-06-20
 	* Added pedestal monitoring plots
